--- a/Reservation/style.css
+++ b/Reservation/style.css
@@ -55,12 +55,20 @@ h1 {
   top: 0;
 }
 
+.titletext {
+  margin: auto;
+  margin-bottom: 20px;
+  font-size: 50px;
+  text-align: center;
+}
+
 .nav {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
   height: 10vh;
   left: 0;
+  font-size: 25px;
 }
 
 .navbar {
@@ -94,9 +102,8 @@ h1 {
   justify-content: start;
   align-items: start;
   margin: 0;
-  max-width: 400px;
+  width: 100%;
   height: 50%;
-  /* background-color: rgba(255, 170, 55, 1); */
   border-radius: 10px;
   padding: 30px;
 }
@@ -130,14 +137,15 @@ h1 {
 
 button {
   display: flex;
-  width: 60%;
-  padding: 10px;
-  margin: 0 auto;
+  width: 20%;
+  padding: 20px;
+  margin: 20px;
   background-color: beige;
   border-radius: 25px;
   color: black;
   font-size: 25px;
   cursor: pointer;
+  justify-content: center;
 }
 
 .campfire {
@@ -152,7 +160,7 @@ button {
 }
 
 .campfire img {
-  margin-bottom: 45vh;
+  margin-bottom: 40vh;
   width: 100%;
   height: 100%;
 }
@@ -177,6 +185,7 @@ button {
 
 .hamburger {
   display: none;
+  font-size: 30px;
 }
 
 #menu-toggle {
@@ -186,8 +195,14 @@ button {
 @media screen and (max-width: 768px) {
   .hamburger {
     display: block;
-    margin-left: 280px;
+    margin-left: auto;
     color: white;
+  }
+
+  .titletext {
+    font-size: 30px;
+    margin-top: 0;
+    margin-left: 100px;
   }
 
   .navbar {
@@ -228,10 +243,12 @@ button {
   }
 
   .form-group {
-    width: 70%;
+    width: 50%;
     margin-top: 0;
-    margin-right: 10px;
+    margin-right: 50px;
     font-size: 15px;
+    display: block;
+    justify-content: start;
   }
 
   .form-group input {
@@ -240,10 +257,6 @@ button {
 
   .campfire {
     display: none;
-  }
-
-  .header {
-    width: 100vw;
   }
 
   button {
@@ -265,5 +278,16 @@ button {
 
   .header {
     width: 100vw;
+  }
+
+  .register {
+    margin: 0;
+  }
+
+  .left-side {
+    display: flex;
+    margin: 0;
+    flex-wrap: wrap;
+    flex-direction: column;
   }
 }
