--- a/contact/style.css
+++ b/contact/style.css
@@ -58,6 +58,7 @@ h1 {
   width: 100%;
   height: 10vh;
   left: 0;
+  font-size: 25px;
 }
 
 .navbar {
@@ -83,6 +84,12 @@ h1 {
 
 .register {
   margin-left: auto;
+}
+
+.titletext {
+  font-size: 50px;
+  margin: 0;
+  padding: 10px;
 }
 
 .contactbox h1 {
@@ -137,6 +144,7 @@ span {
 
 .hamburger {
   display: none;
+  font-size: 30px;
 }
 
 #menu-toggle {
@@ -146,8 +154,18 @@ span {
 @media screen and (max-width: 768px) {
   .hamburger {
     display: block;
-    margin-left: 280px;
+    margin-left: auto;
     color: white;
+  }
+
+  .titletext {
+    margin: 0 0 10px 0;
+    font-size: 30px;
+    text-align: center;
+  }
+
+  .nav {
+    height: 5vh;
   }
 
   .navbar {
@@ -197,5 +215,9 @@ span {
     text-align: center;
     font-size: 20px;
     margin: 5px;
+  }
+
+  .register {
+    margin: 0;
   }
 }
